# src/fields2cover-api/openapi_server/models/generate_route_post_request.py
@@ -3,10 +3,12 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model import Model
+from openapi_server.models.feature_collection import FeatureCollection
 from openapi_server.models.generate_path_post_request_settings_sorter_settings import GeneratePathPostRequestSettingsSorterSettings
 from openapi_server.models.point import Point
 from openapi_server import util
 
+from openapi_server.models.feature_collection import FeatureCollection  # noqa: E501
 from openapi_server.models.generate_path_post_request_settings_sorter_settings import GeneratePathPostRequestSettingsSorterSettings  # noqa: E501
 from openapi_server.models.point import Point  # noqa: E501
 
@@ -20,17 +22,17 @@ class GenerateRoutePostRequest(Model):
         """GenerateRoutePostRequest - a model defined in OpenAPI
 
         :param working_lanes: The working_lanes of this GenerateRoutePostRequest.  # noqa: E501
-        :type working_lanes: str
+        :type working_lanes: FeatureCollection
         :param transport_lanes: The transport_lanes of this GenerateRoutePostRequest.  # noqa: E501
-        :type transport_lanes: str
+        :type transport_lanes: FeatureCollection
         :param start_end_point: The start_end_point of this GenerateRoutePostRequest.  # noqa: E501
         :type start_end_point: Point
         :param sorter_settings: The sorter_settings of this GenerateRoutePostRequest.  # noqa: E501
         :type sorter_settings: GeneratePathPostRequestSettingsSorterSettings
         """
         self.openapi_types = {
-            'working_lanes': str,
-            'transport_lanes': str,
+            'working_lanes': FeatureCollection,
+            'transport_lanes': FeatureCollection,
             'start_end_point': Point,
             'sorter_settings': GeneratePathPostRequestSettingsSorterSettings
         }
@@ -59,24 +61,22 @@ class GenerateRoutePostRequest(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def working_lanes(self) -> str:
+    def working_lanes(self) -> FeatureCollection:
         """Gets the working_lanes of this GenerateRoutePostRequest.
 
-        Optional GeoJSON data for working lanes  # noqa: E501
 
         :return: The working_lanes of this GenerateRoutePostRequest.
-        :rtype: str
+        :rtype: FeatureCollection
         """
         return self._working_lanes
 
     @working_lanes.setter
-    def working_lanes(self, working_lanes: str):
+    def working_lanes(self, working_lanes: FeatureCollection):
         """Sets the working_lanes of this GenerateRoutePostRequest.
 
-        Optional GeoJSON data for working lanes  # noqa: E501
 
         :param working_lanes: The working_lanes of this GenerateRoutePostRequest.
-        :type working_lanes: str
+        :type working_lanes: FeatureCollection
         """
         if working_lanes is None:
             raise ValueError("Invalid value for `working_lanes`, must not be `None`")  # noqa: E501
@@ -84,24 +84,22 @@ class GenerateRoutePostRequest(Model):
         self._working_lanes = working_lanes
 
     @property
-    def transport_lanes(self) -> str:
+    def transport_lanes(self) -> FeatureCollection:
         """Gets the transport_lanes of this GenerateRoutePostRequest.
 
-        Optional GeoJSON data for transport lanes  # noqa: E501
 
         :return: The transport_lanes of this GenerateRoutePostRequest.
-        :rtype: str
+        :rtype: FeatureCollection
         """
         return self._transport_lanes
 
     @transport_lanes.setter
-    def transport_lanes(self, transport_lanes: str):
+    def transport_lanes(self, transport_lanes: FeatureCollection):
         """Sets the transport_lanes of this GenerateRoutePostRequest.
 
-        Optional GeoJSON data for transport lanes  # noqa: E501
 
         :param transport_lanes: The transport_lanes of this GenerateRoutePostRequest.
-        :type transport_lanes: str
+        :type transport_lanes: FeatureCollection
         """
         if transport_lanes is None:
             raise ValueError("Invalid value for `transport_lanes`, must not be `None`")  # noqa: E501
